--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>ohmyfood</title>
@@ -12,42 +13,44 @@
 <body>
 	
 	<header>ohmyfood</header>
-		<div id="container">
+		<main id="container">
 			
-			<div class="menu_a">
+			<section class="menu_a">
 				<i class="fas fa-music"></i>
 					<a href="menu_a.html"><br>
-						<p><span  class="note">La note enchantée</span> <br><span class="sub_a">MENU</span></p>
+						<p class="opacity"><span  class="note">La note enchantée</span> <br><span class="sub_a">MENU</span></p>
 					</a>	
-			</div>
+			</section>
 
-			<div class="menu_b">
+			<section class="menu_b">
 				<a href="menu_b.html">
-					<p><span class="chic">Le chic a la française</span><br><span class="sub_b"><strong>Menu</strong></span></p>
+					<p class="opacity"><span class="chic">Le chic a la française</span><br><span class="sub_b"><strong>Menu</strong></span></p>
 				</a>	
-			</div>
+			</section>
 
-			<div class="menu_c">
+			<section class="menu_c">
 				<a href="menu_c.html">
-					<p><span  class="delices"><strong>Le delice des papilles</strong></span><br><span class="sub_c">Menu</span></p>
+					<p class="opacity"><span  class="delices"><strong>Le delice des papilles</strong></span><br><span class="sub_c">Menu</span></p>
 				</a>	
-			</div>
+			</section>
 
-			<div class="menu_d">
+			<section class="menu_d">
 				<a href="menu_d.html">
-					<p><span  class="goût"><strong>La palette du goût</strong></span><br><span class="sub_d">Menu</span></p>
+					<p class="opacity"><span  class="goût"><strong>La palette du goût</strong></span><br><span class="sub_d">Menu</span></p>
 				</a>
-			</div>
-		</div>
+			</section>
 
-		<div class="prochainement">
-			<p>Prochainement 
-				<span class="dot"></span>
-				<span class="dot"></span>
-				<span class="dot"></span>
-			</p> 
-		</div>
+		</main>
 
+			<section class="prochainement">
+				<p>Prochainement 
+					<span class="dot"></span>
+					<span class="dot"></span>
+					<span class="dot"></span>
+				</p>
+			</section>
+
+	
 	<footer>
 		<div class="btn_mentions">
 			<a href="mentions.html" title="ici" a target="_blank">Mentions légales</a>
