--- a/menu_a.html
+++ b/menu_a.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,55 +12,67 @@
 		<a href="index.html">ohmyfood</a>
 	</header>
 
-		<h1>La Note Enchantée</h1>
-			<div id="container">
-				<h2><i class="fas fa-music"></i><br>La note enchantée</h2>
-					<h3 class="title">Prélude</h3>
-					 	<div class="entree">
-					 		<div>
-								<p>Raviole de foie gras accompagnés de leur crème à la truffe</p>
-								<p>Caviar osciètre sur blini à la farine de blé noir</p>
-								<p>Homard et espuma de potiron mariné aux zest d'oranges</p>
-								<p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
-							</div>
+			<main id="container">
+				<article>
+					<h1>La Note Enchantée</h1>
+						<h2><i class="fas fa-music"></i><br>La note enchantée</h2>
+							<section>
+								<h3 class="prelude"><img src="lines/trait.png" alt="ligne">Prélude<img src="lines/trait.png" alt="ligne"></h3>
+									<div class="entree">
+					 					<div>
+											<p>Raviole de foie gras accompagnés de leur crème à la truffe</p>
+											<p>Caviar osciètre sur blini à la farine de blé noir</p>
+											<p>Homard et espuma de potiron mariné aux zest d'oranges</p>
+											<p>Foie gras de canard cuit entier, confiture de figue et pain toasté</span></p>
+										</div>
 
-							<div>
-								<p>98€</p>
-								<p>115€</p>
-								<p>89€</p>
-								<p>105€</p>
-							</div>
-						</div>	
+										<div>
+											<p>98€</p>
+											<p>115€</p>
+											<p>89€</p>
+											<p>105€</p>
+										</div>
+									</div>
+							</section>		
 
-					<h3 class="title">Point d'orgue</h3>	
-						<div class="plat">	
-							<div>
-								<p>Noix de coquilles saint-jacques sur lit de purée de céleri-rave</p>
-								<p>Langoustine poêlé, purée de patate douce</p>
-								<p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
-							</div>
+							<section>
+								<h3 class="point"><img src="lines/trait.png" alt="ligne"> Point d'orgue <img src="lines/trait.png" alt="ligne"></h3>
+									<div class="plat">
+										<div>	
+											<p>Noix de coquilles saint-jacques sur lit de purée de céleri-rave</p>
+											<p>Langoustine poêlé, purée de patate douce</p>
+											<p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
+										</div>	
 
-							<div>
-								<p>102€</p>	
-								<p>205€</p>
-								<p>69€</p>
-							</div>
-						</div>
-					<h3 class="title">Mouvement final</h3>
-						<div class="dessert">	
-							<div>
-								<p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
-								<p>Baba au rhum revisité et son coulis de citron</p>
-								<p>Tarte au citron meringuée déstrcuturée</p>
-							</div>
-							<div>
-								<p></p>
-								<p></p>
-								<p></p>	
-							</div>
-						</div>	
-			</div>
-					<h3 class="foot">La note enchantée</h3>	
+										<div>
+											<p>102€</p>	
+											<p>205€</p>
+											<p>69€</p>
+										</div>
+									</div>
+							</section>		
+					
+							<section>	
+								<h3 class="final"><img src="lines/trait.png" alt="ligne"> Mouvement final <img src="lines/trait.png" alt="ligne">
+								</h3>
+									<div class="dessert">	
+										<div>
+											<p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+											<p>Baba au rhum revisité et son coulis de citron</p>
+											<p>Tarte au citron meringuée déstrcuturée</p>
+										</div>
+
+										<div>
+											<p></p>
+											<p></p>
+											<p></p>	
+										</div>
+									</div>
+							</section>
+
+					<h4><i class="fas fa-music"></i> La note enchantée</h4>	
+				</article>				
+			</main>
 					
 	<footer>
 		
