--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>ohmyfood</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="C:/Users/loice/OneDrive/Documents/P3//fontawesome-free-5.12.0-web/css/all.min.css">
+	<link rel="stylesheet" type="text/css" href="C:/Users/loice/OneDrive/Documents/P3/P3-ohmyfood.github.io/fontawesome-free-5.12.0-web/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Croissant+One|Dancing+Script|Devonshire|Noto+Serif|Roboto:500|Sriracha&display=swap" rel="stylesheet">
 </head>
 
