--- a/menu_a.html
+++ b/menu_a.html
@@ -17,7 +17,7 @@
 					<h1>La Note Enchantée</h1>
 						<h2><i class="fas fa-music"></i><br>La note enchantée</h2>
 							<section>
-								<h3 class="prelude"><img src="lines/trait.png" alt="ligne">Prélude<img src="lines/trait.png" alt="ligne"></h3>
+								<h3 class="prelude"><img src="lines/trait.PNG" alt="ligne">Prélude<img src="lines/trait.PNG" alt="ligne"></h3>
 									<div class="entree">
 					 					<div>
 											<p>Raviole de foie gras accompagnés de leur crème à la truffe</p>
@@ -36,7 +36,7 @@
 							</section>		
 
 							<section>
-								<h3 class="point"><img src="lines/trait.png" alt="ligne"> Point d'orgue <img src="lines/trait.png" alt="ligne"></h3>
+								<h3 class="point"><img src="lines/trait.PNG" alt="ligne"> Point d'orgue <img src="lines/trait.PNG" alt="ligne"></h3>
 									<div class="plat">
 										<div>	
 											<p>Noix de coquilles saint-jacques sur lit de purée de céleri-rave</p>
@@ -53,7 +53,7 @@
 							</section>		
 					
 							<section>	
-								<h3 class="final"><img src="lines/trait.png" alt="ligne"> Mouvement final <img src="lines/trait.png" alt="ligne">
+								<h3 class="final"><img src="lines/trait.PNG" alt="ligne"> Mouvement final <img src="lines/trait.PNG" alt="ligne">
 								</h3>
 									<div class="dessert">	
 										<div>
