--- a/menu_b.html
+++ b/menu_b.html
@@ -6,7 +6,11 @@
 	<title>Le chic a la francaise</title>
 	<link rel="stylesheet" type="text/css" href="style_menu_b.css">
 	<link rel="stylesheet" type="text/css" href="C:/Users/loice/OneDrive/Documents/P3//fontawesome-free-5.12.0-web/css/all.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Caveat:400,700|Croissant+One|Dancing+Script|Devonshire|Roboto+Slab|Noto+Serif|Roboto:500|Sriracha&display=swap" rel="stylesheet">
+	
+	<link href="https://fonts.googleapis.com/css?family=Croissant+One">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+
 </head>	
 <body>
 	<header>
@@ -18,7 +22,7 @@
 
 			<article>	
 				<h2 class="title">
-					<span class="orange"><img src="lines/orange_left.png" alt="line">Pour se mettre en appétit<img src="lines/orange_right.png" alt="line"></span>
+					<span class="orange"><img src="lines/orange_left.PNG" alt="line">Pour se mettre en appétit<img src="lines/orange_right.PNG" alt="line"></span>
 				</h2>
 					<section class="entree">
 					 	<div>
@@ -37,7 +41,7 @@
 			
 			<article>				
 
-				<h2 class="title"><span class="violet"><img src="lines/purp_left.png" alt="line">Plaisir des papilles<img src="lines/purp-right.png" alt="line"></span>
+				<h2 class="title"><span class="violet"><img src="lines/purp_left.PNG" alt="line">Plaisir des papilles<img src="lines/purp-right.PNG" alt="line"></span>
 				</h2>	
 					<section class="plat">	
 						<div>
@@ -56,7 +60,7 @@
 			
 			<article>		
 					
-				<h2 class="title"><span class="mauve"><img src="lines/blu_left.png" alt="line">Gourmandises sucrées<img src="lines/blu_right.png" alt="line"></span>
+				<h2 class="title"><span class="mauve"><img src="lines/blu_left.PNG" alt="line">Gourmandises sucrées<img src="lines/blu_right.PNG" alt="line"></span>
 				</h2>
 					<section class="dessert">	
 						<div>
@@ -76,7 +80,7 @@
 		</main>
 				
 	<footer>
-		<div class="btn_mentions"><a href="mentions.html" title="ici" a target="_blank">Mentions légales</a></div>
+		<div class="btn_mentions"><a href="mentions.html" title="ici"  target="_blank">Mentions légales</a></div>
 		<div class="btn_contact"><a href="mailto:ohmyfood@gmail.com">Contactez-nous</a></div>
 	</footer>
 
