--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	
 	<footer>
 		<div class="btn_mentions">
-			<a href="mentions.html" title="ici" a target="_blank">Mentions légales</a>
+			<a href="mentions.html" title="ici"  target="_blank">Mentions légales</a>
 			
 		</div>
 
