--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 	<title>ohmyfood</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="C:/Users/loice/OneDrive/Documents/P3/P3-ohmyfood.github.io/fontawesome-free-5.12.0-web/css/all.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Croissant+One|Dancing+Script|Devonshire|Noto+Serif|Roboto:500|Sriracha&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Devonshire&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,40 +20,41 @@
 	<header>ohmyfood</header>
 		<main id="container">
 			
-			<section class="menu_a">
-				<i class="fas fa-music"></i>
+			<div class="menu_a">
+				<img src="note.PNG" alt="music">
 					<a href="menu_a.html"><br>
 						<p class="opacity"><span  class="note">La note enchantée</span> <br><span class="sub_a">MENU</span></p>
 					</a>	
-			</section>
+			</div>
 
-			<section class="menu_b">
+			<div class="menu_b">
 				<a href="menu_b.html">
 					<p class="opacity"><span class="chic">Le chic a la française</span><br><span class="sub_b"><strong>Menu</strong></span></p>
 				</a>	
-			</section>
+			</div>
 
-			<section class="menu_c">
+			<div class="menu_c">
 				<a href="menu_c.html">
 					<p class="opacity"><span  class="delices"><strong>Le delice des papilles</strong></span><br><span class="sub_c">Menu</span></p>
 				</a>	
-			</section>
+			</div>
 
-			<section class="menu_d">
+			<div class="menu_d">
 				<a href="menu_d.html">
 					<p class="opacity"><span  class="goût"><strong>La palette du goût</strong></span><br><span class="sub_d">Menu</span></p>
 				</a>
-			</section>
+			</div>
 
-		</main>
+		</main>	
 
-			<section class="prochainement">
+			<div class="prochainement">
 				<p>Prochainement 
 					<span class="dot"></span>
 					<span class="dot"></span>
 					<span class="dot"></span>
 				</p>
-			</section>
+			</div>
+
 
 	
 	<footer>
