--- a/menu_c.html
+++ b/menu_c.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="C:/Users/loice/OneDrive/Documents/P3//fontawesome-free-5.12.0-web/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:500|Sriracha&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 <body>
 	<header>
 		<a href="index.html">ohmyfood</a>
