--- a/menu_d.html
+++ b/menu_d.html
@@ -43,7 +43,7 @@
 									<p>65€</p>
 								</div>
 								
-						<h2 class="oeuvre"><img src="lines/pal_left.PNG" alt="line">Oeuvre de maître<img src="lines/pal_right.PNG"alt="line">
+						<h2 class="oeuvre"><img src="lines/pal_left.PNG" alt="line">Oeuvre de maître<img src="lines/pal_right.PNG" alt="line">
 						</h2>	
 							<div class="plat">	
 								<div>
@@ -65,6 +65,7 @@
 								<div>			
 									<p>Filet de Turbot aux agrumes</p>
 								</div>
+								<div>
 									<p>125€</p>
 								</div>
 							</div>
