--- a/menu_c.html
+++ b/menu_c.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Le Délice des papilles</title>
 	<link rel="stylesheet" type="text/css" href="style_menu_c.css">
-	<link rel="stylesheet" type="text/css" href="C:/Users/loice/OneDrive/Documents/P3//fontawesome-free-5.12.0-web/css/all.min.css">
+	<link rel="stylesheet" type="text/css" href="C:/Users/loice/OneDrive/Documents/P3/P3-ohmyfood.github.io/fontawesome-free-5.12.0-web/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
