--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		<main id="container">
 			
 			<div class="menu_a">
-				<img src="note.PNG" alt="music">
+				
 					<a href="menu_a.html"><br>
-						<p class="opacity"><span  class="note">La note enchantée</span> <br><span class="sub_a">MENU</span></p>
+						<p class="opacity"><img src="note.PNG" alt="music"><br><span  class="note">La note enchantée</span> <br><span class="sub_a">MENU</span></p>
 					</a>	
 			</div>
 
