--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>ohmyfood</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style_all.css">
 	<link rel="stylesheet" type="text/css" href="C:/Users/loice/OneDrive/Documents/P3/P3-ohmyfood.github.io/fontawesome-free-5.12.0-web/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Devonshire&display=swap" rel="stylesheet">
@@ -17,31 +18,39 @@
 
 <body>
 	
-	<header>ohmyfood</header>
+	<header>
+		<h1>ohmyfood</h1>
+	</header>
 		<main id="container">
 			
 			<div class="menu_a">
 				
 					<a href="menu_a.html"><br>
-						<p class="opacity"><img src="note.PNG" alt="music"><br><span  class="note">La note enchantée</span> <br><span class="sub_a">MENU</span></p>
+						<p class="opacity"><img src="note_3.PNG" alt="music"><br><span class="note">La note enchantée</span> <br><span class="sub_a">MENU</span></p>
 					</a>	
 			</div>
 
 			<div class="menu_b">
 				<a href="menu_b.html">
-					<p class="opacity"><span class="chic">Le chic a la française</span><br><span class="sub_b"><strong>Menu</strong></span></p>
+					<p class="opacity">
+						<span class="chic">Le chic a la française</span><br><span class="sub_b"><strong>Menu</strong></span>
+					</p>
 				</a>	
 			</div>
 
 			<div class="menu_c">
 				<a href="menu_c.html">
-					<p class="opacity"><span  class="delices"><strong>Le delice des papilles</strong></span><br><span class="sub_c">Menu</span></p>
+					<p class="opacity">
+						<span  class="delices"><strong>Le delice des papilles</strong></span><br><span class="sub_c">Menu</span>
+					</p>
 				</a>	
 			</div>
 
 			<div class="menu_d">
 				<a href="menu_d.html">
-					<p class="opacity"><span  class="goût"><strong>La palette du goût</strong></span><br><span class="sub_d">Menu</span></p>
+					<p class="opacity">
+						<span class="goût"><strong>La palette du goût</strong></span><br><span class="sub_d">Menu</span>
+					</p>
 				</a>
 			</div>
 
@@ -60,12 +69,10 @@
 	<footer>
 		<div class="btn_mentions">
 			<a href="mentions.html" title="ici"  target="_blank">Mentions légales</a>
-			
 		</div>
 
 		<div class="btn_contact">
 			<a href="mailto:ohmyfood@gmail.com">Contactez-nous</a>
-			
 		</div>
 	</footer>
 		
