--- a/mentions.html
+++ b/mentions.html
@@ -2,12 +2,29 @@
 <html>
 <head>
 	<title>Mentions legales</title>
+	<link rel="stylesheet" type="text/css" href="style_all.css">
 </head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	
 	
 <body>
-	<header><a  href="index.html">ohmyfood</header></a>
-	<h1>Mentions legales</h1>
+	<header>
+		<a  href="index.html">
+			<h1>ohmyfood</h1>
+		</a>
+	</header>
+		<article>
+			<p>Mentions legales</p>
+		</article>
+	<footer>
+		<div class="btn_mentions">
+			<a href="mentions.html" title="ici"  target="_blank">Mentions légales</a>
+		</div>
+
+		<div class="btn_contact">
+			<a href="mailto:ohmyfood@gmail.com">Contactez-nous</a>
+		</div>
+	</footer>	
+			
 
 </body>
 </html>
