--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>ohmyfood</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style_all.css">
+		<link rel="stylesheet" type="text/css"
+			href="C:/Users/loice/OneDrive/Documents/P3/P3-ohmyfood.github.io/fontawesome-free-5.12.0-web/css/all.min.css">
+		<link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Devonshire&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+	</head>
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>ohmyfood</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="style_all.css">
-	<link rel="stylesheet" type="text/css" href="C:/Users/loice/OneDrive/Documents/P3/P3-ohmyfood.github.io/fontawesome-free-5.12.0-web/css/all.min.css">
-	<link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Devonshire&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-</head>
+	<body>
 
-<body>
-	
-	<header>
-		<h1>ohmyfood</h1>
-	</header>
+		<header>
+			<h1>ohmyfood</h1>
+		</header>
 		<main id="container">
-			
+
 			<div class="menu_a">
-				
-					<a href="menu_a.html"><br>
-						<p class="opacity"><img src="note_3.PNG" alt="music"><br><span class="note">La note enchantée</span> <br><span class="sub_a">MENU</span></p>
-					</a>	
+
+				<a href="menu_a.html"><br>
+					<p class="opacity"><img src="note_3.PNG" alt="music"><br><span class="note">La note enchantée</span>
+						<br><span class="sub_a">MENU</span></p>
+				</a>
 			</div>
 
 			<div class="menu_b">
@@ -35,15 +36,16 @@
 					<p class="opacity">
 						<span class="chic">Le chic a la française</span><br><span class="sub_b"><strong>Menu</strong></span>
 					</p>
-				</a>	
+				</a>
 			</div>
 
 			<div class="menu_c">
 				<a href="menu_c.html">
 					<p class="opacity">
-						<span  class="delices"><strong>Le delice des papilles</strong></span><br><span class="sub_c">Menu</span>
+						<span class="delices"><strong>Le delice des papilles</strong></span><br><span
+							class="sub_c">Menu</span>
 					</p>
-				</a>	
+				</a>
 			</div>
 
 			<div class="menu_d">
@@ -54,30 +56,24 @@
 				</a>
 			</div>
 
-		</main>	
+		</main>
 
-			<div class="prochainement">
-				<p>Prochainement 
-					<span class="dot"></span>
-					<span class="dot"></span>
-					<span class="dot"></span>
-				</p>
+		<div class="prochainement">
+			<p>Prochainement
+				<span class="dot"></span>
+				<span class="dot"></span>
+				<span class="dot"></span>
+			</p>
+		</div>
+
+		<footer>
+			<div class="btn_mentions">
+				<a href="mentions.html" title="ici" target="_blank">Mentions légales</a>
 			</div>
 
-
-	
-	<footer>
-		<div class="btn_mentions">
-			<a href="mentions.html" title="ici"  target="_blank">Mentions légales</a>
-		</div>
-
-		<div class="btn_contact">
-			<a href="mailto:ohmyfood@gmail.com">Contactez-nous</a>
-		</div>
-	</footer>
-		
-	
-	
-
-</body>
+			<div class="btn_contact">
+				<a href="mailto:ohmyfood@gmail.com">Contactez-nous</a>
+			</div>
+		</footer>
+	</body>
 </html>
