--- a/mentions.html
+++ b/mentions.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Mentions legales</title>
-	<link rel="stylesheet" type="text/css" href="style_all.css">
-</head>
-	
-	
-<body>
-	<header>
-		<a  href="index.html">
-			<h1>ohmyfood</h1>
-		</a>
-	</header>
-		
+<html lang="fr">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>Mentions legales</title>
+		<link rel="stylesheet" type="text/css" href="style_all.css">
+	</head>
+
+	<body>
+		<header>
+			<a href="index.html">
+				<h1>ohmyfood</h1>
+			</a>
+		</header>
+
 		<p>Mentions legales</p>
-		
-	<footer>
-		<div class="btn_mentions">
-			<a href="mentions.html" title="ici"  target="_blank">Mentions légales</a>
-		</div>
 
-		<div class="btn_contact">
-			<a href="mailto:ohmyfood@gmail.com">Contactez-nous</a>
-		</div>
-	</footer>	
-			
+		<footer>
+			<div class="btn_mentions">
+				<a href="mentions.html" title="ici" target="_blank">Mentions légales</a>
+			</div>
 
-</body>
+			<div class="btn_contact">
+				<a href="mailto:ohmyfood@gmail.com">Contactez-nous</a>
+			</div>
+		</footer>
+	</body>
 </html>
